[package]
name = "tray-media-button"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trayicon = { version = "0.1.3", features = ["winit"] }
# winit = "0.25"
dirs = "4.0.0"
enigo = "0.0.14"
# hidapi = "1.4.2"
winapi = { version = "0.3.9", features = ["winuser"] }

[build-dependencies]
windres = "0.2.2"
